Login page auth

--- a/CarRent/CarRent.csproj
+++ b/CarRent/CarRent.csproj
@@ -288,6 +288,8 @@
     <Content Include="Views\Car\Rezervation.cshtml" />
     <Content Include="Views\Shared\_LayoutLogin.cshtml" />
     <Content Include="Views\Account\Login.cshtml" />
+    <Content Include="Views\Account\Continue.cshtml" />
+    <Content Include="Views\Account\Error.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
