--- a/CarRent/CarRent.csproj
+++ b/CarRent/CarRent.csproj
@@ -195,6 +195,7 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\ViewModels\Account.cs" />
+    <Compile Include="Models\ViewModels\ReservationModel.cs" />
     <Compile Include="Models\ViewModels\VehicleDetail.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -290,6 +291,7 @@
     <Content Include="Views\Account\Login.cshtml" />
     <Content Include="Views\Account\Continue.cshtml" />
     <Content Include="Views\Account\Error.cshtml" />
+    <Content Include="Views\Account\isNotAllow.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
