calendar added for dropoff date of car

--- a/CarRent/CarRent.csproj
+++ b/CarRent/CarRent.csproj
@@ -131,6 +131,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\CarController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\RentController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -339,6 +340,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="imagesLogin\" />
+    <Folder Include="Views\Rent\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
