--- a/CarRent/CarRent.csproj
+++ b/CarRent/CarRent.csproj
@@ -238,6 +238,7 @@
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="images\fiorino2024.jpg" />
     <Content Include="images\focus2022.jpg" />
     <Content Include="Models\Model1.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
